# PI-BT-DeepONet

./: .gitignore  README.md  main.py  pyproject.toml
configs/: base.yaml  burgers.yaml  darcy.yaml  diffusion_reaction.yaml  diffusion_reaction_hard_bc.yaml  diffusion_reaction_s_pinn.yaml  diffusion_reaction_stabilized_pi.yaml  diffusion_reaction_standard_pi.yaml  diffusion_reaction_trunk_ex.yaml  diffusion_reaction_trunk_pod.yaml  ns_beltrami_ic2field.yaml  ns_beltrami_parametric.yaml  ns_kovasznay_bc2field.yaml  ns_kovasznay_parametric.yaml  paper_antiderivative.yaml  paper_diffusion_reaction.yaml
scripts/: CHECKPOINT_RESUME.md  STAGE6_COMMANDS.md  STAGE6_epochs_and_pod.md  STAGE7_8_RUN_STRATEGY.md  STAGE7_COMMANDS.md  aggregate_paper_results.py  aggregate_stage7_from_history.py  build_diffusion_reaction_pod_basis.py  build_ns_pod_basis.py  compare_4_combos.py  compare_8_combos.py  compare_ablation.py  plot_paper_figures.py  plot_stage6_ns_training_curves.py  plot_stage7_thesis_figures.py  plot_stage8_rel_l2_test_mse.py  run_paper_experiments.py  run_stage6.bat  run_stage6_experiments.py  run_stage7_experiments.py  run_stage8_experiments.py  run_standard_experiments.py  update_stage6_summary_mins.py
scripts/paper/: README.md  _smoke_run_plot.py  _smoke_run_plot_antiderivative.py  exp1_baseline_comparison.py  exp2_poisson_2d.py  factor_contribution_analysis.ipynb  factor_contribution_analysis.py  plot_chapter3_branch_scaling.py  plot_exp1_antiderivative_classic_curves.py  (+1 more)
src/: __init__.py
src/data/: __init__.py  (+1 more)
thesis/: build.bat  main.tex  ructhesis.cls
(+26 files in other folders)
